--- a/Codigos/Pagina inicial/styleHeader.css
+++ b/Codigos/Pagina inicial/styleHeader.css
@@ -1,13 +1,75 @@
+header{
+    margin-top: 30px;
+}
+.logo{
+    font-size:40px;
+    padding: 10px;
+    text-decoration: none;
+    color:rgb(117, 117, 238);
+}
+.logo:hover{
+    color: #666;
+}
+.seach{
+    float: right;
+    padding: 10px;
+    width: 400px;
+    height: 50px;
+    font-size: 15px;
+}
+
+nav{
+    display: flex;
+    position:fixed;
+}
+
+nav li{
+    float: left;
+    list-style: none;
+    padding: 20px;
+}
+
+nav li a {
+    color: #666;
+    font-size: 20px;
+    text-decoration: none;  
+}
+
+nav a:hover{
+    color: rgb(117, 117, 238);
+}
+
+.idiomas{
+    float: right;
+    display: flex;
+    margin-right: 20px;
+
+}
+
+.idiomas a{
+    display: flex;
+    padding: 15px;
+    text-decoration: none;
+    color:#000;
+}
+
+.idiomas a:hover{
+    color:rgb(117, 117, 238);
+}
+
 .conteudo_home{
     text-align:center;
     margin-top:100px;
 }
 .classH1{
     position:relative; top:-50px;
-    font-size:95px;
+    font-size:90px;
+    
     margin: 10px;
+    padding-top: 40px;
 }
 .classH2{
+    font-weight: 90;
     position:relative; top:-20px;
     font-size:35px;
     color: rgb(117, 117, 238);
