--- a/Codigos/Videos/style.css
+++ b/Codigos/Videos/style.css
@@ -1,73 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background: #607CD6;
+    background-color: #6057CD;
+    font-family: 'Poppins', sans-serif;
 }
 
-.container {
-    width: 80%;
-    margin: 80px auto;
-}
-
-.container h1 {
-    padding: 60px 0;
-    color: #fff;
-    font-size: 44px;
+.conteudo .cabecalho {
+    font-size: 30px;
+    margin: 2rem 0;
+    text-transform: capitalize;
+    letter-spacing: .2rem;
     text-align: center;
+    color: black;
 }
 
-.row {
+.conteudo_vid {
     display: flex;
-    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
-.col {
-    flex-basis: 50%;
-    min-width: 250px;
-}
-
-.img {
-    width: 83%;
-    margin: auto;
-    position: relative;
-    border-radius: 6px;
+.conteudo_vid .video {
+    height: 700px;
+    width: 1250px;
+    margin: 2rem;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .5);
     overflow: hidden;
+    border-radius: 1rem;
 }
 
-.img_peq {
-    display: flex;
-    background: #efefef;
-    margin: 20px 0;
-    align-items: center;
-    border-radius: 6px;
-    overflow: hidden;
-    width: 85%;
-}
-
-.img_peq {
-    position: relative;
-}
-
-.img_peq img {
-    width: 150px;
-}
-
-.img_peq p {
-    margin-left: 20px;
-    color: #707070;
-    line-height: 22px;
-    font-size: 15px;
-}
-
-.btn_play {
-    width: 60px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+.conteudo_vid .video video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    outline: none;
+    border: none;
     cursor: pointer;
+}
+
+.conteudo_vid .video video:hover {
+    transition: 0.2s linear;
+    transform: scale(1.3);
+}
+
+.conteudo_vid .video .active {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: auto;
+    width: 80%;
+    box-shadow: 0 0 0 100vh rgba(0, 0, 0, .7);
+    z-index: 1;
+}
+
+.conteudo_vid .video .active:hover {
+    transition: none;
+    transform: translate(-50%, -50%) scale(1);
 }
